--- a/src/Components/FeatureCollection/FeatureCollection.scss
+++ b/src/Components/FeatureCollection/FeatureCollection.scss
@@ -1,43 +1,57 @@
-.top-collection{
-    position: relative;
-    margin-bottom: 15px;
-    img{
-        transition: all 0.5s;
-        cursor: pointer;
-    }
-    h5{
-        text-align: center;
-        position:absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        font-family: 'Titillium Web', sans-serif;
-        font-weight: bold;
-        transition: all 0.5s
-    }
-    .btn-brand {
-        background-color: #ffa501;
-        padding: 7px 20px;
-        border: none;
-        font-weight: 500;
-        border-radius: 2px;
-        position: absolute;
-        bottom: 10px;
-        left: 50%;
-        transform: translate(-60px, 0px);
-        transition: 0.5s;
-        opacity: 0;
-    }
+.top-collection {
+  position: relative;
+  margin-bottom: 15px;
+  img {
+    transition: all 0.5s;
+    cursor: pointer;
+  }
+  h5 {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: "Titillium Web", sans-serif;
+    font-weight: bold;
+    transition: all 0.5s;
+    margin-bottom: 10px;
+  }
+  .btn-brand {
+    background-color: #ffa501;
+    padding: 7px 20px;
+    border: none;
+    font-weight: 500;
+    border-radius: 2px;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translate(-60px, 0px);
+    transition: 0.5s;
+    opacity: 0;
+  }
 
-    &:hover img{
-        filter: brightness(50%);
+  @media screen and (max-width: 768px) {
+    .btn-brand {
+      bottom: 30%;
+      opacity: 1;
     }
-    &:hover button{
-        bottom: 30%;
-        opacity: 1;
+    img {
+      filter: brightness(50%);
     }
-    &:hover h5{
-        top: 40%;
+    h5 {
+      top: 40%;
     }
+  }
+
+  &:hover img {
+    filter: brightness(50%);
+  }
+  &:hover button {
+    bottom: 25%;
+    opacity: 1;
+  }
+  &:hover h5 {
+    top: 40%;
+  }
 }
